tests/NormalTests/paczka1/fuzzy1/27418227.err
Error in line 9: ik9C5h3sVS S501 731,6
Error in line 15: XMlqaN2 S748 91,8
Error in line 10: Dcj S501 87,3
Error in line 16: XMlqaN2 S501 66,3
Error in line 14: ik9C5h3sVS A397 60,1
Error in line 26: Dcj S748 122,6
